Fixed email spacing

--- a/app/assets/stylesheets/styles/base/responsive.scss
+++ b/app/assets/stylesheets/styles/base/responsive.scss
@@ -729,6 +729,10 @@
     font-size: 15px;
   }
 
+  .email-link {
+    font-size: .70em;
+  }
+
   /* Tour page */
   #tour-details .price-section {
     .details { float: none !important; }
@@ -773,7 +777,9 @@
     font-size: .78em;
   }
 
-
+  .email-link {
+    font-size: .51em !important;
+  }
 
   h1.sign-up-bonus-h1-title {
     font-size: 12px;
