--- a/app/assets/stylesheets/styles/base/style.scss
+++ b/app/assets/stylesheets/styles/base/style.scss
@@ -905,7 +905,7 @@ ol {  }
     li {
       float: left; padding-right: 4px;
       &:last-child { padding-right: 0; }
-      a { color: #fff; display: block; padding: 0 20px; background: #d9d9d9; font-size: 1em; font-weight: bold; height: 40px; line-height: 40px; text-decoration: none; text-transform: uppercase; white-space: nowrap; }
+      a { color: #fff; display: block; background: #d9d9d9; font-size: 1em; font-weight: bold; height: 40px; line-height: 40px; text-decoration: none; text-transform: uppercase;}
       a:hover { }
       &.active > a, &:hover > a { color: $skin-active-color; background: #fff; }
     }
